Added all mediaquery

--- a/project-01/src/index.html
+++ b/project-01/src/index.html
@@ -50,7 +50,8 @@
             <h2 class="section-training__title typographic-meb title">Комплексная подготовка к ВНО <br /> по английскому
               языку</h2>
             <p class="section-training__slogan typographic-mb">Просто не будет. <br /> Но ты гарантировано наберешь
-              <span class="section-training__slogan section-training__slogan--colortext typographic-mb">+25 баллов</span></p>
+              <span class="section-training__slogan section-training__slogan--colortext typographic-mb">+25
+                баллов</span></p>
             <button class="button button--light section-training__button typographic-tb" type="button">хочу на
               бесплатное занятие</button>
           </div>
@@ -338,30 +339,30 @@
         <div class="section-choosing__wrapper">
           <h2 class="section-choosing__title typographic-meb">Почему нас
             выбирают</h2>
-          <ul class="menu-problem section-choosing__menu-problem items">
-            <li class="menu-problem__item">
-              <p class="menu-problem__text">Обучение в <span
-                  class="menu-problem__text menu-problem__text--position">малых</span> командах</p>
+          <ul class="menu-problem menu-problem--select section-choosing__menu-problem">
+            <li class="menu-problem__item menu-problem__item--selection">
+              <p class="menu-problem__text menu-problem__text--format">Обучение в <span
+                  class="menu-problem__text menu-problem__text--format menu-problem__text--position">малых</span> командах</p>
             </li>
-            <li class="menu-problem__item">
-              <p class="menu-problem__text">Визуализированные
+            <li class="menu-problem__item menu-problem__item--selection">
+              <p class="menu-problem__text menu-problem__text--format">Визуализированные
                 конспекты</p>
             </li>
-            <li class="menu-problem__item">
-              <p class="menu-problem__text">Каждое занятие имеет
+            <li class="menu-problem__item menu-problem__item--selection">
+              <p class="menu-problem__text menu-problem__text--format">Каждое занятие имеет
                 цель и конкретный
                 результат </p>
             </li>
-            <li class="menu-problem__item">
-              <p class="menu-problem__text">Реальные результаты преподавателя</p>
+            <li class="menu-problem__item menu-problem__item--selection">
+              <p class="menu-problem__text menu-problem__text--format">Реальные результаты преподавателя</p>
             </li>
-            <li class="menu-problem__item">
-              <p class="menu-problem__text">Программа курса
+            <li class="menu-problem__item menu-problem__item--selection">
+              <p class="menu-problem__text menu-problem__text--format">Программа курса
                 соответствует требованиям
                 МОН Украины</p>
             </li>
-            <li class="menu-problem__item">
-              <p class="menu-problem__text">Набор команд по уровням знаний</p>
+            <li class="menu-problem__item menu-problem__item--selection">
+              <p class="menu-problem__text menu-problem__text--format">Набор команд по уровням знаний</p>
             </li>
           </ul>
         </div>
@@ -424,8 +425,8 @@
               </li>
               <li class="list-warranty__item">
                 <p class="list-warranty__text typographic-mm">Ты научишься писать сочинения минимум на 10 баллов из
-                  14. <br
-                  class="list-warranty__text--newstring" /><span class="list-warranty__text list-warranty__text--colortext typographic-mm">В то
+                  14. <br class="list-warranty__text--newstring" /><span
+                    class="list-warranty__text list-warranty__text--colortext typographic-mm">В то
                     время как 20% учеников получили
                     за сочинение 0.</span>
                 </p>
@@ -476,8 +477,9 @@
                 <p class="graduate-card__text graduate-card__text--narrow typographic-mm">За короткий час занять з
                   Оленою я опанувала граматику і
                   поповнила свій зовсім пустий словниковий запас. З першого ж заняття я зрозуміла, що знаходжуся у своїй
-                  тарілці ...<a class="graduate-card__link graduate-card__text graduate-card__text--colortext" href="#">Читать
-                  дальше</a></p>
+                  тарілці ...<a class="graduate-card__link graduate-card__text graduate-card__text--colortext"
+                    href="#">Читать
+                    дальше</a></p>
                 <p class="graduate-card__text graduate-card__text--wide typographic-mm">За короткий час
                   занять з Оленою я опанувала граматику і
                   поповнила свій зовсім пустий словниковий запас. З першого ж заняття я зрозуміла, що знаходжуся у
@@ -485,8 +487,8 @@
                   тарілці. Ми з Оленою стали друзями, тому що її справді хвилювала моя успішність. Вона стала для мене
                   авторитетом, проте я не тремтіла на уроках, маючи страх зробити найменшу помилку. Зараз я можу
                   похизуватись тим, що я студен ...
-                <a class="graduate-card__link graduate-card__text graduate-card__text--colortext" href="#">Читать
-                  дальше</a></p>
+                  <a class="graduate-card__link graduate-card__text graduate-card__text--colortext" href="#">Читать
+                    дальше</a></p>
               </div>
             </li>
             <li class="slider__item">
@@ -565,9 +567,10 @@
               С вами свяжется консультант и ответит на вопросы.</p>
             <input class="input-field section-form__input typographic-mb" type="text" name="name" placeholder="Имя*"
               minlength="4" maxlength="30" autocomplete="name" required>
-            <input class="input-field section-form__input typographic-mb" type="tel" name="tel" placeholder="Телефон*"
+            <input class="input-field section-form__input typographic-mb" type="tel" name="phone" placeholder="Телефон*"
               minlength="6" maxlength="30" autocomplete="tel" required>
-            <button class="button section-form__button button--light button--longer typographic-tb" type="button">хочу на бесплатное
+            <button class="button section-form__button button--light button--longer typographic-tb" type="button">хочу
+              на бесплатное
               занятие</button>
           </form>
         </div>
@@ -577,8 +580,8 @@
   </main>
 
 
-  <footer class="footer">
-    <div class="footer__wrapper container">
+  <footer class="footer container">
+    <div class="footer__wrapper ">
       <ul class="footer__menu">
         <li class="footer__item footer__item--logo">
           <a href="#" class="footer__logo logo">
@@ -595,7 +598,7 @@
                 </use>
               </svg>
 
-              <input class="footer-form__input typographic-msb" type="tel" name="phone" id="phoneNummber"
+              <input class="footer-form__input typographic-msb" type="tel" name="tel" id="phoneNummber"
                 placeholder="+38 (000) 000 00 00" required autocomplete="tel-national" minlength="13" maxlength="19"
                 pattern="+38 ([0-9]{3}) [0-9]{3} [0-9]{2} [0-9]{2}">
             </label>
@@ -607,11 +610,12 @@
           </a>
         </li>
       </ul>
-      <div class="copyright footer__copyright">
-        <p class="copyright__text typographic-mm">
-          <span class="copyright__symbol typographic-mm">&copy;</span> Все права защищены, 2019</p>
-      </div>
     </div>
+    <div class="copyright footer__copyright ">
+      <p class="copyright__text typographic-mm">
+        <span class="copyright__symbol typographic-mm">&copy;</span> Все права защищены, 2019</p>
+    </div>
+
   </footer>
 
 </body>
