--- a/project-01/src/index.html
+++ b/project-01/src/index.html
@@ -19,7 +19,7 @@
         <a href="#" class="logo navigation__logo">
           <img class="img logo__img " src="./images/logo-mob.png" alt="brand and company name"
             srcset="images/logo-mob.png 320w, images/logo-tabl.png 768w, images/logo-desk.png 1280w"
-            sizes="(min-width: 768px) 768px, 320px,100wv">
+            sizes="(min-width: 1280px) 1280px, (min-width: 768px) 768px, 320px">
         </a>
         <ul class="menu navigation--list">
           <li class="menu__item">
@@ -381,19 +381,19 @@
               </picture>
             </div>
             <div class="card__content">
-              <h3 class="card__title typographic-meb">Елена Морева</h3>
+              <h3 class="card__title typographic-meb text-lightdark">Елена Морева</h3>
               <ul class="card__items">
                 <li class="card__item">
-                  <p class="card__description typographic-msb">Опыт подготовки <span
+                  <p class="card__description typographic-msb text-lightdark">Опыт подготовки <span
                       class="card__description card__description--position">учеников</span>
                     к ВНО - 6 лет</p>
                 </li>
                 <li class="card__item">
-                  <p class="card__description typographic-msb">Собственный результат сдачи ВНО - 197 баллов 2 года
+                  <p class="card__description typographic-msb text-lightdark">Собственный результат сдачи ВНО - 197 баллов 2 года
                     подряд</p>
                 </li>
                 <li class="card__item">
-                  <p class="card__description typographic-msb">Сдала на отлично международный аналог ВНО - Кембриджский
+                  <p class="card__description typographic-msb text-lightdark">Сдала на отлично международный аналог ВНО - Кембриджский
                     PET (Preliminary Eng&shy;lish Test)</p>
                 </li>
               </ul>
@@ -405,7 +405,7 @@
                 (Berke&shy;ley), English Grammar&Style (The University of Queesland), How to Write an Essay
                 (Berke&shy;ley), Academic and Business Writing (Berke&shy;ley), The Art of Teaching (GEMS
                 edu&shy;cation), Powerful Tools for Teaching and Learning (University of Houston).</p>
-              <a href="#" class="card__link typographic-mr">Cambrige English Entry Level Certificate</a>
+              <a href="#" class="card__link typographic-mr text-orange">Cambrige English Entry Level Certificate</a>
             </div>
           </div>
         </div>
@@ -414,7 +414,7 @@
 
       <section class="section-warranty">
         <div class="section-warranty__wrapper">
-          <h2 class="section-warranty__title typographic-meb">Мы гарантируем</h2>
+          <h2 class="section-warranty__title typographic-meb text-lightdark">Мы гарантируем</h2>
           <div class="section-warranty__wrapper-list">
             <ul class="list-warranty section-warranty__items">
               <li class="list-warranty__item">
@@ -558,11 +558,11 @@
       <section class="section-form">
         <div class="section-form__wrapper">
           <form class="section-form__form" action="#" method="GET">
-            <h2 class="section-form__title typographic-meb">Регистрация на
+            <h2 class="section-form__title typographic-meb text-white">Регистрация на
               <span class="section-form__title section-form__title--colortext">бесплатную </span> телефонную
               <span class="section-form__title section-form__title--colortext">консультацию </span>
               по нюансам ЗНО<br /> по английскому языку</h2>
-            <p class="section-form__description typographic-msb">Оставь заявку на участие в<span
+            <p class="section-form__description typographic-msb text-white">Оставь заявку на участие в<span
                 class="section-form__description section-form__description--colortext"> бесплатном занятии. </span>
               С вами свяжется консультант и ответит на вопросы.</p>
             <input class="input-field section-form__input typographic-mb" type="text" name="name" placeholder="Имя*"
@@ -598,7 +598,7 @@
                 </use>
               </svg>
 
-              <input class="footer-form__input typographic-msb" type="tel" name="tel" id="phoneNummber"
+              <input class="footer-form__input typographic-msb text-lightdark" type="tel" name="tel" id="phoneNummber"
                 placeholder="+38 (000) 000 00 00" required autocomplete="tel-national" minlength="13" maxlength="19"
                 pattern="+38 ([0-9]{3}) [0-9]{3} [0-9]{2} [0-9]{2}">
             </label>
@@ -612,8 +612,8 @@
       </ul>
     </div>
     <div class="copyright footer__copyright ">
-      <p class="copyright__text typographic-mm">
-        <span class="copyright__symbol typographic-mm">&copy;</span> Все права защищены, 2019</p>
+      <p class="copyright__text typographic-mm text-light">
+        <span class="copyright__symbol typographic-mm text-light">&copy;</span> Все права защищены, 2019</p>
     </div>
 
   </footer>
