Added link and checked on the validator

--- a/project-01/src/index.html
+++ b/project-01/src/index.html
@@ -19,23 +19,23 @@
         <a href="#" class="logo navigation__logo">
           <img class="img logo__img " src="./images/logo-mob.png" alt="brand and company name"
             srcset="images/logo-mob.png 320w, images/logo-tabl.png 768w, images/logo-desk.png 1280w"
-            sizes="(min-width: 1280px) 1280px, (min-width: 768px) 768px, 320px">
+            sizes="(min-width: 1320px) 1280px, (min-width: 808px) 768px, 320px">
         </a>
         <ul class="menu navigation--list">
           <li class="menu__item">
-            <a class="menu__link typographic-tb text-lightgrey" href="#">Программа обучения</a>
+            <a class="menu__link typographic-tb text-lightgrey" href="#program">Программа обучения</a>
           </li>
           <li class="menu__item">
-            <a class="menu__link typographic-tb text-lightgrey" href="#">о нас</a>
+            <a class="menu__link typographic-tb text-lightgrey" href="#choice">о нас</a>
           </li>
           <li class="menu__item">
-            <a class="menu__link typographic-tb text-lightgrey" href="#">варианты обучения</a>
+            <a class="menu__link typographic-tb text-lightgrey" href="#action">варианты обучения</a>
           </li>
           <li class="menu__item">
-            <a class="menu__link typographic-tb text-lightgrey" href="#">контакты</a>
+            <a class="menu__link typographic-tb text-lightgrey" href="#consultation">контакты</a>
           </li>
           <li class="menu__item menu__item--button">
-            <button class="button button--lighter menu__button typographic-tb" href="#">консультация по
+            <button class="button button--lighter menu__button typographic-tb" type="button">консультация по
               телефону</button>
           </li>
         </ul>
@@ -47,9 +47,11 @@
       <section class="section-training header__section-training">
         <div class="section-training__wrapper">
           <div class="section-training__content">
-            <h2 class="section-training__title typographic-meb text-dark">Комплексная подготовка к ВНО <br /> по английскому
+            <h2 class="section-training__title typographic-meb text-dark">Комплексная подготовка к ВНО <br /> по
+              английскому
               языку</h2>
-            <p class="section-training__slogan typographic-mb text-dark">Просто не будет. <br /> Но ты гарантировано наберешь
+            <p class="section-training__slogan typographic-mb text-dark">Просто не будет. <br /> Но ты гарантировано
+              наберешь
               <span class="section-training__slogan section-training__slogan--colortext typographic-mb">+25
                 баллов</span></p>
             <button class="button button--light section-training__button typographic-tb" type="button">хочу на
@@ -69,6 +71,7 @@
 
       <section class="section-icons header__section-icons">
         <div class="section-icons__wrapper">
+          <h2 class="section-icons__title visually-hidden">Наше преимущество</h2>
           <ul class="menu-icons">
             <li class="menu-icons__item menu-icons__item--first">
               <a href="#" class="menu-icons__link menu-icons__link--female">
@@ -97,7 +100,8 @@
                   </use>
                 </svg>
               </a>
-              <p class="menu-icons__description menu-icons__description--size typographic-mb text-dark">Финансовая гарантия
+              <p class="menu-icons__description menu-icons__description--size typographic-mb text-dark">Финансовая
+                гарантия
                 результата</p>
             </li>
           </ul>
@@ -127,7 +131,8 @@
               <p class="menu-problem__text typographic-mb text-dark">Неумение воспринимать устную английскую речь</p>
             </li>
             <li class="menu-problem__item">
-              <p class="menu-problem__text typographic-mb text-dark">Скупой словарный запас <br /> для написания сочинения</p>
+              <p class="menu-problem__text typographic-mb text-dark">Скупой словарный запас <br /> для написания
+                сочинения</p>
             </li>
             <li class="menu-problem__item">
               <p class="menu-problem__text typographic-mb text-dark">Подготовка в одиночку</p>
@@ -142,7 +147,7 @@
         </div>
       </section>
 
-      <section class="section-action">
+      <section class="section-action" id="action">
         <div class="section-action__wrapper">
           <h2 class="section-action__title typographic-meb text-dark">Как мы это делаем</h2>
           <ul class="menu-actions section-action__items items">
@@ -163,7 +168,8 @@
                 <svg class="icon menu-actions__icon">
                   <use width="104%" height="127%" href="./images/icons-svg/symbol-defs.svg#icon-mobile-learning"></use>
                 </svg>
-                <h3 class="menu-actions__title typographic-mb text-lightdark">Аудиторное<br class="menu-actions__title--location" />
+                <h3 class="menu-actions__title typographic-mb text-lightdark">Аудиторное<br
+                    class="menu-actions__title--location" />
                   и онлайн-обучение</h3>
                 <p class="menu-actions__text typographic-mr text-grey">Учитель поможет не <span
                     class="menu-actions__text menu-actions__text--position">только</span>
@@ -178,7 +184,8 @@
                 </svg>
                 <h3 class="menu-actions__title typographic-mb text-lightdark">Привычка читать
                   <br class="menu-actions__title--location" />на английском языке</h3>
-                <p class="menu-actions__text typographic-mr text-grey">Статьи из источников, которые используются при разработке
+                <p class="menu-actions__text typographic-mr text-grey">Статьи из источников, которые используются при
+                  разработке
                   настоящего ВНО, будут
                   приходить на телефон дважды в неделю.</p>
               </a>
@@ -190,8 +197,8 @@
                 </svg>
                 <h3 class="menu-actions__title typographic-mb text-lightdark">Психологическая<br
                     class="menu-actions__title--location" /> поддержка</h3>
-                <p class="menu-actions__text typographic-mr text-grey">Мы научим тебя методикам прохождения тестирований, <br
-                    class="menu-actions__text--location" />умению планировать свою<br
+                <p class="menu-actions__text typographic-mr text-grey">Мы научим тебя методикам прохождения
+                  тестирований, <br class="menu-actions__text--location" />умению планировать свою<br
                     class="menu-actions__text--location" />
                   подготовку уверенности в себе</p>
               </a>
@@ -203,7 +210,8 @@
                 </svg>
                 <h3 class="menu-actions__title typographic-mb text-lightdark">Обучение по автроским
                   пособиям</h3>
-                <p class="menu-actions__text typographic-mr text-grey">Тебе не нужно тратить время на самостоятельный поиск
+                <p class="menu-actions__text typographic-mr text-grey">Тебе не нужно тратить время на самостоятельный
+                  поиск
                   материала и ничего покупать
                   дополнительно. Мы составили 2 пособия для тебя.</p>
               </a>
@@ -224,7 +232,7 @@
         </div>
       </section>
 
-      <section class="section-program">
+      <section class="section-program" id="program">
         <div class="section-program__wrapper container">
           <h2 class="section-program__title typographic-meb text-white">Наша программа</h2>
           <ul class="list-program section-program__list">
@@ -335,14 +343,15 @@
         </div>
       </section>
 
-      <section class="section-choosing container">
+      <section class="section-choosing container" id="choice">
         <div class="section-choosing__wrapper">
           <h2 class="section-choosing__title typographic-meb text-white">Почему нас
             выбирают</h2>
           <ul class="menu-problem menu-problem--select section-choosing__menu-problem">
             <li class="menu-problem__item menu-problem__item--selection">
               <p class="menu-problem__text menu-problem__text--format">Обучение в <span
-                  class="menu-problem__text menu-problem__text--format menu-problem__text--position">малых</span> командах</p>
+                  class="menu-problem__text menu-problem__text--format menu-problem__text--position">малых</span>
+                командах</p>
             </li>
             <li class="menu-problem__item menu-problem__item--selection">
               <p class="menu-problem__text menu-problem__text--format">Визуализированные
@@ -374,9 +383,9 @@
           <div class="card section-teacher__card">
             <div class="card__img">
               <picture>
-                <source srcset="images/teacher-desk-larg.png" type="image/png" media="(min-width: 1680px)">
-                <source srcset="images/teacher-desk.png" type="image/png" media="(min-width: 1280px)">
-                <source srcset="images/teacher-tabl.png" type="image/png" media="(min-width: 768px)">
+                <source srcset="images/teacher-desk-larg.png" type="image/png" media="(min-width: 1720px)">
+                <source srcset="images/teacher-desk.png" type="image/png" media="(min-width: 1320px)">
+                <source srcset="images/teacher-tabl.png" type="image/png" media="(min-width: 808px)">
                 <img class="img card__image" src="./images/teacher.png" alt="Елена Морева">
               </picture>
             </div>
@@ -389,11 +398,13 @@
                     к ВНО - 6 лет</p>
                 </li>
                 <li class="card__item">
-                  <p class="card__description typographic-msb text-lightdark">Собственный результат сдачи ВНО - 197 баллов 2 года
+                  <p class="card__description typographic-msb text-lightdark">Собственный результат сдачи ВНО - 197
+                    баллов 2 года
                     подряд</p>
                 </li>
                 <li class="card__item">
-                  <p class="card__description typographic-msb text-lightdark">Сдала на отлично международный аналог ВНО - Кембриджский
+                  <p class="card__description typographic-msb text-lightdark">Сдала на отлично международный аналог ВНО
+                    - Кембриджский
                     PET (Preliminary Eng&shy;lish Test)</p>
                 </li>
               </ul>
@@ -401,7 +412,7 @@
                 международных отношений НАУ по специальности переводчик - аналитик.</p>
               <p class="card__text typographic-mr">В свободное время проходит курсы от лучших университетов мира по
                 эффективному преподаванию и методикам написания сочинений.</p>
-              <p class="card__text typographic-mr">В числе пройденных: English Grammar and Essay&shy Writing
+              <p class="card__text typographic-mr">В числе пройденных: English Grammar and Essay&shy; Writing
                 (Berke&shy;ley), English Grammar&Style (The University of Queesland), How to Write an Essay
                 (Berke&shy;ley), Academic and Business Writing (Berke&shy;ley), The Art of Teaching (GEMS
                 edu&shy;cation), Powerful Tools for Teaching and Learning (University of Houston).</p>
@@ -418,13 +429,15 @@
           <div class="section-warranty__wrapper-list">
             <ul class="list-warranty section-warranty__items">
               <li class="list-warranty__item">
-                <p class="list-warranty__text typographic-mm text-dark">Ты сдашь ВНО минимум на 25 баллов лучше, чем на первом
+                <p class="list-warranty__text typographic-mm text-dark">Ты сдашь ВНО минимум на 25 баллов лучше, чем на
+                  первом
                   пробном
                   тестировании.<br class="list-warranty__text--newline" /> Иначе мы вернем деньги.<span
                     class="list-warranty__text typographic-mm list-warranty__text--colortext">*</span></p>
               </li>
               <li class="list-warranty__item">
-                <p class="list-warranty__text typographic-mm text-dark">Ты научишься писать сочинения минимум на 10 баллов из
+                <p class="list-warranty__text typographic-mm text-dark">Ты научишься писать сочинения минимум на 10
+                  баллов из
                   14. <br class="list-warranty__text--newstring" /><span
                     class="list-warranty__text list-warranty__text--colortext typographic-mm">В то
                     время как 20% учеников получили
@@ -432,7 +445,8 @@
                 </p>
               </li>
               <li class="list-warranty__item">
-                <p class="list-warranty__text typographic-mm text-dark">Ты будешь заниматься в своем районе. Мы выберем место
+                <p class="list-warranty__text typographic-mm text-dark">Ты будешь заниматься в своем районе. Мы выберем
+                  место
                   проведения занятий после формирования команд.</p>
               </li>
               <li class="list-warranty__item">
@@ -457,8 +471,8 @@
               <div class="slider__link-wrapper">
                 <a href="#" class="slider__link slider__link--img">
                   <picture>
-                    <source srcset="images/graduate7.png" type="image/png" media="(min-width: 1280px)">
-                    <source srcset="images/graduate1.png" type="image/png" media="(max-width: 1279px)">
+                    <source srcset="images/graduate7.png" type="image/png" media="(min-width: 1320px)">
+                    <source srcset="images/graduate1.png" type="image/png" media="(max-width: 1319px)">
                     <img class="img slider__img" src="./images/graduate1.png" alt="Тоня Кучеровская">
                   </picture>
                 </a>
@@ -471,15 +485,18 @@
               </div>
               <div class="graduate-card slider__graduate-card">
                 <h3 class="graduate-card__title typographic-meb text-orange">Тоня Кучеровская</h3>
-                <p class="graduate-card__description typographic-mm text-grey">Выпуск 2015-го года, Національний університет
+                <p class="graduate-card__description typographic-mm text-grey">Выпуск 2015-го года, Національний
+                  університет
                   біоресурсів
                   і природокористування України</p>
-                <p class="graduate-card__text graduate-card__text--narrow typographic-mm text-dark">За короткий час занять з
+                <p class="graduate-card__text graduate-card__text--narrow typographic-mm text-dark">За короткий час
+                  занять з
                   Оленою я опанувала граматику і
                   поповнила свій зовсім пустий словниковий запас. З першого ж заняття я зрозуміла, що знаходжуся у своїй
                   тарілці ...<a class="graduate-card__link graduate-card__text graduate-card__text--colortext"
                     href="#">Читать
-                    дальше</a></p>
+                    дальше</a>
+                </p>
                 <p class="graduate-card__text graduate-card__text--wide typographic-mm text-dark">За короткий час
                   занять з Оленою я опанувала граматику і
                   поповнила свій зовсім пустий словниковий запас. З першого ж заняття я зрозуміла, що знаходжуся у
@@ -557,7 +574,7 @@
 
       <section class="section-form">
         <div class="section-form__wrapper">
-          <form class="section-form__form" action="#" method="GET">
+          <form class="section-form__form" action="#" method="GET" id="registration">
             <h2 class="section-form__title typographic-meb text-white">Регистрация на
               <span class="section-form__title section-form__title--colortext">бесплатную </span> телефонную
               <span class="section-form__title section-form__title--colortext">консультацию </span>
@@ -569,7 +586,7 @@
               minlength="4" maxlength="30" autocomplete="name" required>
             <input class="input-field section-form__input typographic-mb" type="tel" name="phone" placeholder="Телефон*"
               minlength="6" maxlength="30" autocomplete="tel" required>
-            <button class="button section-form__button button--light button--longer typographic-tb" type="button">хочу
+            <button class="button section-form__button button--light button--longer typographic-tb" type="submit">хочу
               на бесплатное
               занятие</button>
           </form>
@@ -587,19 +604,18 @@
           <a href="#" class="footer__logo logo">
             <img class="img footer__img" src="./images/logo-mob.png" alt="brand and company name"
               srcset="images/logo-mob.png 320w, images/logo-tabl.png 768w, images/logo-desk.png 1280w"
-              sizes="(min-width: 768px) 768px, 100wv">
+              sizes="(min-width: 1320px) 1280px, (min-width: 808px) 768px, 320px">
           </a>
         </li>
         <li class="footer__item footer__item--form">
-          <form class="footer-form footer__form" action="#" method="GET">
+          <form class="footer-form footer__form" action="#" method="GET" id="consultation">
             <label class="footer-form__label" for="phoneNummber">
               <svg class="icon footer-form__icon">
                 <use y="0" x="-3" width="125%" height="125%" href="./images/icons-svg/symbol-defs.svg#icon-call">
                 </use>
               </svg>
-
               <input class="footer-form__input typographic-msb text-lightdark" type="tel" name="tel" id="phoneNummber"
-                placeholder="+38 (000) 000 00 00" required autocomplete="tel-national" minlength="13" maxlength="19"
+                placeholder="+38 (000) 000 00 00" required autocomplete="tel" minlength="13" maxlength="19"
                 pattern="+38 ([0-9]{3}) [0-9]{3} [0-9]{2} [0-9]{2}">
             </label>
           </form>
