Corrected footer-phone

--- a/project-01/src/index.html
+++ b/project-01/src/index.html
@@ -509,7 +509,8 @@
                         <br class="list-program__text--location" />
                         <span
                           class="list-program__text list-program__text--word"
-                          >Numeral</span>
+                          >Numeral</span
+                        >
                       </p>
                     </li>
                     <li class="list-program__content">
@@ -984,9 +985,13 @@
                 по нюансам ЗНО<br />
                 по английскому языку
               </h2>
-              <p class="section-form__description typographic-msb text-white">Оставь заявку на участие в<span
+              <p class="section-form__description typographic-msb text-white">
+                Оставь заявку на участие в<span
                   class="section-form__description section-form__description--colortext"
-                > бесплатном занятии. </span><br class="section-form__description--newstring"/>С вами свяжется консультант и ответит на вопросы.
+                >
+                  бесплатном занятии. </span
+                ><br class="section-form__description--newstring" />С вами
+                свяжется консультант и ответит на вопросы.
               </p>
               <input
                 class="input-field section-form__input typographic-mb"
@@ -1038,36 +1043,21 @@
               />
             </a>
           </li>
-          <li class="footer__item footer__item--form">
-            <form
-              class="footer-form footer__form"
-              action="#"
-              method="GET"
-              id="consultation">
-              <label class="footer-form__label" for="phoneNummber">
-                <svg class="icon footer-form__icon">
-                  <use
-                    y="0"
-                    x="-3"
-                    width="125%"
-                    height="125%"
-                    href="./images/icons-svg/symbol-defs.svg#icon-call"
-                  ></use>
-                </svg>
-                <input
-                  class="footer-form__input typographic-msb text-lightdark"
-                  type="tel"
-                  name="tel"
-                  id="phoneNummber"
-                  placeholder="+38 (000) 000 00 00"
-                  required
-                  autocomplete="tel"
-                  minlength="13"
-                  maxlength="19"
-                  pattern="+38 ([0-9]{3}) [0-9]{3} [0-9]{2} [0-9]{2}"
-                />
-              </label>
-            </form>
+          <li class="footer__item footer__item--phone">
+            <a href="#" class="footer-phone footer__link">
+              <svg class="icon footer-phone__icon">
+                <use
+                  y="0"
+                  x="-3"
+                  width="125%"
+                  height="125%"
+                  href="./images/icons-svg/symbol-defs.svg#icon-call"
+                ></use>
+              </svg>
+              <span class="footer-phone__number typographic-mb text-lightdark"
+                >+38 (000) 000 00 00</span
+              >
+            </a>
           </li>
           <li class="footer__item footer__item--form">
             <a href="#" class="footer__link">
@@ -1081,8 +1071,7 @@
           <p class="copyright__text typographic-mm text-light">
             <span class="copyright__symbol typographic-mm text-light"
               >&copy;</span
-            >
-            Все права защищены, 2019
+            >Все права защищены, 2019
           </p>
         </div>
       </div>
